--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,10 +18,12 @@
 
 
 /*Components*/
+@import "./components/carrusel";
 @import "./components/navbar";
 @import "./components/cards";
 @import "./components/animaciones";
 @import "./components/boton";
+
 
 @import "./layout/media/media1024";
 @import "./layout/media/media768";
