--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,6 @@ header img {
   object-fit: contain;
 }
 
-.main img {
-  width: 100%;
-  height: 600px;
-  object-fit: cover;
-}
-
 .section-principal {
   width: auto;
   height: 300px;
@@ -48,21 +42,22 @@ header img {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 80px 80px;
-}
-.section-principal img {
-  width: 50px;
-}
-.section-principal p {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
+  padding: 40px 40px;
 }
 .section-principal div {
-  text-align: center;
   justify-content: space-between;
-  width: 15%;
-  height: 20%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 50%;
+  height: auto;
+}
+.section-principal div img {
+  width: 50px;
+}
+.section-principal div p {
+  margin-top: 5px;
+  text-align: center;
 }
 
 .section-article {
@@ -263,13 +258,20 @@ input:focus {
 }
 
 /*Components*/
+.carousel-inner img {
+  max-height: 400px;
+  min-width: auto;
+  object-fit: cover;
+}
+
 .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: grey;
-  height: 40px;
+  height: auto;
   gap: 20px;
+  margin: 0;
 }
 .navbar li {
   list-style: none;
