--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -3,8 +3,9 @@
     justify-content: center;
     align-items: center;
     background-color: map-get($color , primario );
-    height: 40px;
+    height: auto;
     gap: 20px;
+    margin: 0;
     
 
         li{
