--- a/scss/layout/_sectionindex.scss
+++ b/scss/layout/_sectionindex.scss
@@ -1,30 +1,26 @@
-.main{
-    img{
-        width: 100%;
-        height: 600px;
-        object-fit: cover;
-    }
-}
+
 
 .section-principal{
     width: auto;
     height: 300px;
     background-color: map-get($color , secundario );
     @include flex(row);
-    padding: 80px 80px;
-    img{
-        width: 50px;
-    }
-    p{
-        display: flex;
-        flex-direction: row;
-        text-align: center;
-    }
+    padding: 40px 40px;
     div{
-        text-align: center;
         justify-content: space-between;
-        width: 15%;
-        height: 20%; 
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 50%;
+        height: auto; 
+        img{
+            width: 50px;
+        }
+        p{
+            margin-top: 5px;
+            text-align: center;
+            
+        }
     }
 }
 
