--- a/css/style.css
+++ b/css/style.css
@@ -594,12 +594,11 @@ input:focus {
     height: auto;
   }
   .navbar {
-    padding: 150px;
     display: flex;
     flex-direction: column;
     text-align: center;
     background-color: grey;
-    height: 200px;
+    height: auto;
   }
   .section-productos {
     display: grid;
