--- a/css/style.css
+++ b/css/style.css
@@ -83,14 +83,6 @@ header img {
   flex-direction: row;
 }
 
-.footer {
-  background-color: white;
-  padding: 20px;
-  width: 10auto;
-  height: 100px;
-  text-align: center;
-}
-
 .section-quienesomos {
   padding: 80px 5%;
   display: flex;
@@ -483,6 +475,67 @@ input:focus {
   color: black;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer {
+  background-color: brown;
+  padding: 80px 0;
+}
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-links {
+  width: 25%;
+  padding: 0 15px;
+}
+.footer-links h4 {
+  font-size: 20px;
+  color: white;
+  margin-bottom: 25px;
+  font-weight: 500;
+  border-bottom: 2px solid white;
+  padding-bottom: 10px;
+  display: inline-block;
+}
+.footer-links ul {
+  list-style-type: none;
+}
+.footer-links ul li a {
+  font-size: 18px;
+  text-decoration: none;
+  color: white;
+  display: block;
+  margin-bottom: 15px;
+  transition: all 0.3s ease;
+}
+.footer-links ul li :hover {
+  color: grey;
+  padding-left: 6px;
+}
+
+.social-links a {
+  display: inline-block;
+  min-height: 40px;
+  width: 40px;
+  background-color: grey;
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: white;
+  transition: all 0.5s ease;
+}
+.social-links :hover {
+  background-color: brown;
+}
+
 @media (max-width: 1024px) {
   .card-container {
     display: flex;
@@ -525,6 +578,15 @@ input:focus {
     width: 100%;
     height: auto;
     object-fit: contain;
+  }
+}
+@media (max-width: 991px) {
+  .footer-row {
+    text-align: center;
+  }
+  .footer-links {
+    width: 100%;
+    margin-bottom: 30px;
   }
 }
 @media (max-width: 768px) {
