se cambia section-article del index

--- a/scss/layout/media/_media476.scss
+++ b/scss/layout/media/_media476.scss
@@ -70,6 +70,16 @@ form{
    height: 50%;
    @include flex(column);
 }
+.section-article{
+            h2{
+                top: 10%;
+                padding: 5px;
+            }
+            p{
+                top: 30%;
+                padding: 10px;
+            }
+        }
 //QUIENES SOMOS HTML
 .section-quienesomos{
     padding: 80px 5%;   
