--- a/css/style.css
+++ b/css/style.css
@@ -61,26 +61,32 @@ header img {
 }
 
 .section-article {
-  width: auto;
-  display: flex;
-  flex-direction: row;
-}
-.section-article article {
-  background-color: grey;
-  width: auto;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-}
-.section-article article div {
-  padding: 20px;
+  background-size: cover;
+  height: 400px;
+  position: relative;
+  border-radius: 20px;
 }
 .section-article img {
-  width: auto;
-  height: 400px;
   object-fit: cover;
-  display: flex;
-  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+}
+.section-article h2 {
+  padding: 40px;
+  font-size: 50px;
+  color: white;
+  position: absolute;
+  top: 20%;
+  text-shadow: 0 0 8px black;
+}
+.section-article p {
+  padding: 40px;
+  font-size: 25px;
+  color: white;
+  position: absolute;
+  top: 50%;
+  text-shadow: 0 0 8px black;
 }
 
 .section-quienesomos {
@@ -559,14 +565,21 @@ input:focus {
     justify-content: center;
   }
   .section-article {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+    height: auto;
   }
   .section-article img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
+    background-size: cover;
+    height: 200px;
+  }
+  .section-article h2 {
+    top: 10%;
+    padding: 10px;
+    font-size: 20px;
+  }
+  .section-article p {
+    top: 30%;
+    padding: 20px;
+    font-size: 15px;
   }
 }
 @media (max-width: 991px) {
@@ -617,16 +630,6 @@ input:focus {
     padding: 10px 10px;
     align-items: center;
     justify-content: center;
-  }
-  .section-article {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  .section-article img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
   }
   .section-quienesomos {
     padding: 80px 5%;
@@ -704,6 +707,14 @@ input:focus {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .section-article h2 {
+    top: 10%;
+    padding: 5px;
+  }
+  .section-article p {
+    top: 30%;
+    padding: 10px;
   }
   .section-quienesomos {
     padding: 80px 5%;
