--- a/scss/layout/_sectionindex.scss
+++ b/scss/layout/_sectionindex.scss
@@ -23,26 +23,33 @@
         }
     }
 }
-
 .section-article{
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    article{
-        background-color: map-get($color , primario );
-        width: auto;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        div{
-            padding: 20px;
-        }
-    }
+
+   background-size: cover;
+    height: 400px;
+    position: relative;
+    border-radius: 20px;
     img{
-        width: auto;
-        height: 400px;
         object-fit: cover;
-        display: flex;
-        flex-direction: row;
+        width: 100%;
+        height: 100%;
+        opacity: 0.9;
+    }
+    h2{
+        padding: 40px;
+        font-size: 50px;
+        color: map-get($color , secundario );
+        position: absolute;
+        top: 20%;
+        text-shadow: 0 0 8px black;
+    }
+
+    p{
+        padding: 40px;
+        font-size: 25px;
+        color: map-get($color , secundario );
+        position: absolute;
+        top: 50%;
+        text-shadow: 0 0 8px black;
     }
 }
