--- a/scss/layout/media/_media1024.scss
+++ b/scss/layout/media/_media1024.scss
@@ -40,13 +40,20 @@
     }
 }
 .section-article{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
+height: auto;
         img{
-            width: 100%;
-            height: auto;
-            object-fit:contain;
+            background-size: cover;
+            height: 200px;
+        }
+        h2{
+            top: 10%;
+            padding: 10px;
+            font-size: 20px;
+        }
+        p{
+            top: 30%;
+            padding: 20px;
+            font-size: 15px;
         }
     }
 
